tests/valid_programs/tags/the_dot_dot.duck
use std::io::{println};

fn main() {
    let x: .a | .b | .. = ..;
    match x {
        .a => println("wrong!"),
        .b => println("wrong!"),
        .. => println("correct!"),
    };
}
