tests/errors/references/struct_nested_mut_method_call.duck
struct A {
} impl {
    mut fn m() {}
}

struct B {
    a: A,
} impl {
}

fn main() {
    const b = B { a: A {} };
    b.a.m();
}
